Initial commit with JavaFX source code